deploy/kubernetes/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trustcloud-idp
  labels:
    app.kubernetes.io/part-of: trustcloud
