deploy/kubernetes/keycloak/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: trustcloud-idp
  labels:
    app.kubernetes.io/name: keycloak-postgres
    app.kubernetes.io/part-of: trustcloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
