deploy/kubernetes/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: trustcloud-idp
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: trustcloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
