deploy/kubernetes/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: trustcloud-idp
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: trustcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - idp.trust-cloud.dev
      secretName: idp-trust-cloud-dev-tls
  rules:
    - host: idp.trust-cloud.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
